--- a/css/reset.css
+++ b/css/reset.css
@@ -5,3 +5,8 @@
     padding: 0px;
     box-sizing: border-box; /*permet d'inclure les bordures et les padding DANS la dimension*/
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
