--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -1,11 +1,11 @@
 form {
     margin: 0 auto;
-    width: 600px;
+    width: 800px;
     font-size: 20px;
 }
 
 form div {
-    margin: 30px;
+    margin: 30px 0;
 }
 
 form input {
