--- a/css/reset.css
+++ b/css/reset.css
@@ -6,7 +6,15 @@
     box-sizing: border-box; /*permet d'inclure les bordures et les padding DANS la dimension*/
 }
 
+*:after {
+    box-sizing: border-box;
+  }
+
 a, abbr {
     color: inherit;
     text-decoration: none;
+}
+
+fieldset {
+    border: none;
 }
